# eqcharinfo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  appsetting.ini  appsettings.ini  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  startapi.sh  tox.ini
.github/workflows/: codecov.yml  pre-commit.yml  python-tests.yml
eqcharinfo/: api.py  character_inventory_client.py  characterdb.py  database_manager.py  download_itemlist.py  inventoryclient.py  inventorydb.py  itemlist_provider.py  lucyitemclient.py  lucyitemdb.py  lucytable_sync.py  route_handler.py
eqcharinfo/api/: api.py
eqcharinfo/client/: inventoryclient.py  lucyitemclient.py
eqcharinfo/controllers/: __init__.py  characterclient.py  charfile_ingest.py  database_manager.py  inventorytable_sync.py  lucyitemclient.py  lucytable_sync.py
eqcharinfo/models/: __init__.py  characterinventory.py  chartablerow.py  generalsearchresult.py  inventory.py  inventoryslot.py  lucyitem.py  (+2 more)
html/: character_inventory.html  character_list.html  character_search.html  character_upload.html  characterlist.html  index.html
tests/: api_test.py  character_inventory_client_test.py  characterclient_test.py  characterdb_test.py  characterinventoryprovider_test.py  charfile_ingest_test.py  conftest.py  download_itemlist_test.py  fileutil_test.py  inventoryclient_test.py  inventorydb_test.py  inventorytable_sync_test.py  itemlist_provider_test.py  lucyitemclient_test.py  lucyitemdb_test.py  lucyitemfilemanager_test.py  lucyitemprovider_test.py  lucytable_sync_test.py  route_handler_test.py
(+10 files in other folders)
