[metadata]
name = eqcharinfo
version = 0.0.1
description = EverQuest character info mapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/preocts/eqcharinfo
author = Preocts
author_email = preocts@preocts.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.9

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:run]
branch = True
source = tests
source_pkgs =
    eqcharinfo

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImlementedError
    if 0:
    if __name__ == .__main__.:
ignore_errors = True

[coverage:html]
directory = coverage_html_report

[coverage:xml]
output = coverage.xml
